--- a/app/components/score/progressbar.css
+++ b/app/components/score/progressbar.css
@@ -7,9 +7,9 @@
 .progressbar-range {
     background-image:linear-gradient(to right, darkgrey, ghostwhite );
     width: calc(100% - 20px);
-    height: calc(100% - 12px);
+    height: calc(100% - 16px);
     margin-left: 10px;
-    margin-top: 6px;
+    margin-top: 8px;
     color: orange;
     border-radius: 5px;
     
@@ -34,10 +34,10 @@
     }
 }
 
-.progress {
+.progressbar-progress {
     position: absolute;
     width: calc(100% - 20px);
-    height: calc(100% - 12px);
+    height: calc(100% - 16px);
     background-image:linear-gradient(to right, red, orange 25%, gold 50%, lightgreen 70%, green 99% );
     background-repeat: no-repeat;
     opacity: 0.7;
