--- a/app/editor-components/animation-help/animation-help.css
+++ b/app/editor-components/animation-help/animation-help.css
@@ -1,3 +1,8 @@
+.animation-helper {
+    background: white;
+    z-index: 100;
+}
+
 .animation-helper .menu-item {
     font-family: "Open Sans Condensed";
     float: left;
