--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -1524,3 +1524,158 @@ animation: focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	}
   }
 
+
+
+/**
+* ----------------------------------------
+* animation focus-in-expand
+* ----------------------------------------
+*/
+@-webkit-keyframes focus-in-expand {
+		0% {
+		letter-spacing: -0.5em;
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+		}
+		100% {
+		-webkit-filter: blur(0px);
+		filter: blur(0px);
+		opacity: 1;
+	  }
+	}
+@keyframes focus-in-expand {
+	0% {
+	letter-spacing: -0.5em;
+	-webkit-filter: blur(12px);
+	filter: blur(12px);
+	opacity: 0;
+}
+100% {
+	-webkit-filter: blur(0px);
+	filter: blur(0px);
+	opacity: 1;
+	}
+}
+	
+	
+	
+	/**
+	* ----------------------------------------
+	* animation focus-in-contract-bck
+	* ----------------------------------------
+	*/
+	@-webkit-keyframes focus-in-contract-bck {
+		0% {
+			letter-spacing: 1em;
+			-webkit-transform: translateZ(300px);
+			transform: translateZ(300px);
+			-webkit-filter: blur(12px);
+			filter: blur(12px);
+			opacity: 0;
+		}
+		100% {
+			-webkit-transform: translateZ(12px);
+			transform: translateZ(12px);
+			-webkit-filter: blur(0);
+			filter: blur(0);
+			opacity: 1;
+		}
+	}
+
+	
+	/**
+	* ----------------------------------------
+	* animation text-blur-out
+	* ----------------------------------------
+	*/
+	@-webkit-keyframes text-blur-out {
+		0% {
+			-webkit-filter: blur(0.01);
+			filter: blur(0.01);
+		}
+		100% {
+			-webkit-filter: blur(12px) opacity(0%);
+			filter: blur(12px) opacity(0%);
+		}
+	}
+	@keyframes text-blur-out {
+		0% {
+			-webkit-filter: blur(0.01);
+			filter: blur(0.01);
+		}
+		100% {
+			-webkit-filter: blur(12px) opacity(0%);
+			filter: blur(12px) opacity(0%);
+		}
+	}
+	
+	/**
+	* ----------------------------------------
+	* @animation text-shadow-drop-center
+	* ----------------------------------------
+	*/
+	@-webkit-keyframes text-shadow-drop-center {
+		0% {
+			text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+		}
+		100% {
+			text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
+		}
+	}
+	@keyframes text-shadow-drop-center {
+		0% {
+			text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+		}
+		100% {
+			text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
+		}
+	}
+	/**
+	* ----------------------------------------
+	* @animation text-color-change
+	* ----------------------------------------
+	*/
+	@keyframes text-color-change {
+	0% { color: #2e4468; }
+	33% { color: #3c763d; }
+	66% { color: #ca5800; }
+	100% { color: #2e4468; }
+	}
+		
+	
+	.elegantshadow {
+	color: #131313;
+	letter-spacing: .15em;
+	text-shadow: 
+	1px -1px 0 #767676, 
+	-1px 2px 1px #737272, 
+	-2px 4px 1px #767474, 
+	-3px 6px 1px #787777, 
+	-4px 8px 1px #7b7a7a, 
+	-5px 10px 1px #7f7d7d, 
+	-6px 12px 1px #828181, 
+	-7px 14px 1px #868585, 
+	-8px 16px 1px #8b8a89, 
+	-9px 18px 1px #8f8e8d, 
+	-10px 20px 1px #949392, 
+	-11px 22px 1px #999897, 
+	-12px 24px 1px #9e9c9c, 
+	-13px 26px 1px #a3a1a1, 
+	-14px 28px 1px #a8a6a6, 
+	-15px 30px 1px #adabab, 
+	-16px 32px 1px #b2b1b0, 
+	-17px 34px 1px #b7b6b5, 
+	-18px 36px 1px #bcbbba, 
+	-19px 38px 1px #c1bfbf, 
+	-20px 40px 1px #c6c4c4, 
+	-21px 42px 1px #cbc9c8, 
+	-22px 44px 1px #cfcdcd, 
+	-23px 46px 1px #d4d2d1, 
+	-24px 48px 1px #d8d6d5, 
+	-25px 50px 1px #dbdad9, 
+	-26px 52px 1px #dfdddc, 
+	-27px 54px 1px #e2e0df, 
+	-28px 56px 1px #e4e3e2;
+	}
+	
