--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -38,14 +38,128 @@ pre {
 }
 
 #loading {
-	position: fixed;
+	position: absolute;
+	background: white;
 	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 9999;
-	background: url(gifs/loading.gif) center no-repeat #fff;
+	color: silver;
+	overflow: hidden;
+	font-family: Open Sans Condensed;
+
 }
+
+
+
+#loading-author {
+	position: relative;
+	width: 100%;
+	margin-top: 10%;
+	margin-bottom: 0;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 800;
+	animation: anim-fade-in 1.2s,anim-scale-up 1.2s;
+}
+
+
+#loading-titling {
+	position: relative;
+	margin-top: 2%;
+	width: 100%;
+	text-align: center;
+	font-size: 100px;
+	font-weight: 800;
+	animation: anim-fade-in 3s,anim-scale-up 3s;
+}
+
+
+#loading-description {
+	position: relative;
+	margin-top: 2%;
+	width: 100%;
+	height: 100px;
+	text-align: center;
+	font-size: 40px;
+	animation: anim-fade-in 2s,anim-scale-up 2s;
+}
+
+
+
+#loading #topline {
+	position: absolute;
+	left: 0;
+	top: 10%;
+	width: 100%;
+	height: 1px;
+	background: black; /* For browsers that do not support gradients */
+	background: linear-gradient(to right, transparent, var(--primarylight) 12%, var(--quartarylight) 48%, var(--primarylight) 52%, transparent 92%); /* Standard syntax */
+
+}
+
+
+
+#loading #topline2 {
+	position: absolute;
+	left: 0;
+	top: 20%;
+	width: 100%;
+	height: 1px;
+	background: black; /* For browsers that do not support gradients */
+	background: linear-gradient(to right, transparent, var(--primarylight) 12%, var(--quartarylight) 48%, var(--primarylight) 52%, transparent 92%); /* Standard syntax */
+}
+
+
+#loading #middleline {
+	position: absolute;
+	left: 0;
+	top: 60%;
+	width: 100%;
+	height: 1px;
+	background: black; /* For browsers that do not support gradients */
+	background: linear-gradient(to right, transparent, var(--primarylight) 12%, var(--quartarylight) 48%, var(--primarylight) 52%, transparent 92%); /* Standard syntax */
+}
+
+
+#loading #lowerline {
+	position: absolute;
+	left: 0;
+	top: 80%;
+	width: 100%;
+	height: 1px;
+	background: black; /* For browsers that do not support gradients */
+	background: linear-gradient(to right, transparent, var(--primarylight) 12%, var(--quartarylight) 48%, var(--primarylight) 52%, transparent 92%); /* Standard syntax */
+}
+
+
+#loading #date {
+	position: absolute;
+	bottom: 30px;
+	left: 50px;
+	width: 300px;
+	height: auto;
+	font-size: 2vw;
+	font-family: Open Sans Condensed;
+	font-weight: 800;
+	color: silver;
+	animation: focus-in 1.2s, anim-fade-in 1.2s;
+}
+
+
+
+#loading #logo {
+	position: absolute;
+	bottom: 30px;
+	right: 50px;
+	width: 300px;
+	height: auto;
+	animation: focus-in 1.2s, anim-fade-in 1.2s;
+}
+
+
+
+
 
 #loading-title {
 	font-family: 'Open Sans', sans-serif;
@@ -66,6 +180,7 @@ pre {
 	width: 100%;
 	height: 100%;
 	display: block;
+	overflow: hidden;
 }
 
 .focus-glow {
@@ -561,6 +676,67 @@ label {
 }
 
 
+/**
+ * ----------------------------------------
+ * animation slide-in-left
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-in-left {
+	0% {
+	  -webkit-transform: translateX(-1000px);
+			  transform: translateX(-1000px);
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateX(0);
+			  transform: translateX(0);
+	  opacity: 1;
+	}
+  }
+  @keyframes slide-in-left {
+	0% {
+	  -webkit-transform: translateX(-1000px);
+			  transform: translateX(-1000px);
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateX(0);
+			  transform: translateX(0);
+	  opacity: 1;
+	}
+  }
+  
+
+/**
+ * ----------------------------------------
+ * animation slide-out-right
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-out-right {
+	0% {
+	  -webkit-transform: translateX(0);
+			  transform: translateX(0);
+	  opacity: 1;
+	}
+	100% {
+	  -webkit-transform: translateX(1000px);
+			  transform: translateX(1000px);
+	  opacity: 0;
+	}
+  }
+  @keyframes slide-out-right {
+	0% {
+	  -webkit-transform: translateX(0);
+			  transform: translateX(0);
+	  opacity: 1;
+	}
+	100% {
+	  -webkit-transform: translateX(1000px);
+			  transform: translateX(1000px);
+	  opacity: 0;
+	}
+  }
+  
 
 /**
 * ----------------------------------------
