Improve calculator styling (hover effect)

--- a/app/components/calculator/calculator.css
+++ b/app/components/calculator/calculator.css
@@ -50,5 +50,11 @@
 }
 
 .desaturated {
-	filter: saturate(30%);
+	filter: saturate(20%);
+	transition: all 1.2s;
+}
+
+
+.desaturated:hover {
+	filter: saturate(50%);
 }
